--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "daisyui": "^2.51.6",
     "next": "13.3.1",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.23",
