--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/search-js-react": "^1.0.0-beta.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanem/react-nprogress": "^5.0.35",
     "@types/node": "18.15.13",
@@ -17,15 +16,18 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "daisyui": "^2.51.6",
-    "mapbox-gl": "^2.14.1",
     "next": "13.3.1",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.23",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-places-autocomplete": "^7.2.9"
   }
 }
