--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanem/react-nprogress": "^5.0.35",
-    "@types/node": "18.15.13",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "daisyui": "^2.51.6",
     "next": "13.3.1",
@@ -28,6 +26,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-places-autocomplete": "^7.2.9"
+    "@types/react-places-autocomplete": "^7.2.9",
+    "@types/node": "18.15.13",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11"
   }
 }
